Backgrounds in HTML inside foreignObject don't draw https://bugs.webkit.org/show_bug.cgi?id=23111

Patch by Florin Malita <fmalita@google.com> on 2012-02-01
Reviewed by Eric Seidel.

Source/WebCore:

Test: svg/foreignObject/body-background.svg

* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintBackground):
Tweak the <body> background inhibiting logic to allow drawing when the element is embedded in FOs.

LayoutTests:

* svg/foreignObject/body-background-expected.png: Added.
* svg/foreignObject/body-background-expected.txt: Added.
* svg/foreignObject/body-background.svg: Added.

Canonical link: https://commits.webkit.org/94455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106510 268f45cc-cd09-0410-ab3c-d52691b4dbfc